# intersection_cuts

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  __init__.py  ants1.py  binary_knapsacks.ipynb  binary_knapsacks_ipm.ipynb  branchers.py  branchers_test.py  cplex_utils.py  diagnose_jsp.py  dikin_for_basis_improvement.ipynb  dikin_narrow_viz.ipynb  dikin_narrower.ipynb  dikin_utils.py  dp1.py  example_loader.py  exp_hull_cuts.py  exp_hull_cuts_jsp.py  exp_hull_cuts_knap.py  experiment1.py  experiment10_gur.py  experiment11_gur.py  experiment12_gur.py  experiment1_real.py  experiment2.py  experiment3.py  experiment4.py  experiment5.py  experiment6.py  experiment6_jsp.py  experiment7.py  experiment7_cuts_gap_cpl.py  experiment7_cuts_gap_gur.py  experiment7_cuts_only_cpl.py  experiment7_cuts_only_gur.py  experiment8_gur.py  experiment9_gur.py  experiment_jsp.py  (+76 more)
.zed/: settings.json
benchmarks/: benchmark_seysen_integer_matrix.py  benchmark_seysen_integer_matrix_sparse.py  unimod_transform_speed.py
math/: notes.tex
ntl_interface/: .clangd  CMakeLists.txt  build.sh  conversion_tests.cpp  lll_apx_tests.cpp  lll_utils.cpp  lll_utils.hpp  main.cpp  main_tests.cpp
ntl_interface/.zed/: settings.json  tasks.json
tests/: README.md  __init__.py  branchers_test.py  test_W_from_Q_via_LLL.py  test_angles.py  test_compare_gmi_cuts.py  test_cplex_utils.py  test_cuppy.py  test_cuppy_knap.py  test_dioph_paper.py  test_dioph_paper_seysen.py  test_gmi_highs_extended.py  test_gmic.py  test_hnf_slv.py  test_jsp_can_reduce.py  test_lll_apx_sparse.py  test_multi_round_gmi.py  test_nullspace_extension.py  test_orthogonality_metrics.py  test_rounderizer_angles.py  test_seysen_group_counts.py  test_seysen_reduce.py  test_snf_slv.py  test_tableau_gmi.py  test_to_U_via_LU.py  test_unimod_transform_quality.py  validate_angles.py
